# bevyjam6

./: Cargo.toml  flake.nix  index.html  shell.nix
mobile/: Cargo.toml  Makefile  manifest.yaml
mobile/mobile.xcodeproj/: project.pbxproj
mobile/src/: lib.rs
src/: game.rs  main.rs  menu.rs
